fixed vertical scrollbar using box-sizing: border-box

--- a/app.css
+++ b/app.css
@@ -12,12 +12,12 @@
   body{
      border: 1px solid green;
      height: 100vh;
+     box-sizing: border-box;
      font-family: 'Roboto', sans-serif;
      font-size: 16px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
-    
 }
 
 
